--- a/old_pages_html/contact page/contact.css
+++ b/old_pages_html/contact page/contact.css
@@ -659,17 +659,18 @@ input[type='number']:hover::-webkit-outer-spin-button {
 }
 
 #notifications {
-  position: fixed;
-  bottom: 10px;
-  right: 10px;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
 }
-.notif{
-  background-color: white;
-  color: #444411;
-  border-radius: 5px;
-  padding: 1rem 2rem;
-  margin .5rem;
+
+.notif {
+    background-color: white;
+    color: #444411;
+    border-radius: 5px;
+    padding: 1rem 2rem;
+    margin: .5rem;
 }
