--- a/views/pages/contact.ejs
+++ b/views/pages/contact.ejs
@@ -24,6 +24,7 @@
         </ul>
     </header>
     <!-- CONTENT START -->
+    <div id="notifications"></div>
 
     <div class="banner-container">
         <h1>Contact Us</h1>
@@ -38,13 +39,13 @@
                     <input type="text" id="fname" name="firstname" placeholder="First Name" required />
                 </div>
 
-                <div style="width: 48%">
+                <div style="width: 50%">
                     <label for="lname">Last Name</label>
-                    <input type="text" id="lname" name="lastname" placeholder="Last Name" required/>
+                    <input type="text" id="lname" name="lastname" placeholder="Last Name" required />
                 </div>
             </div>
             <label for="email">Email</label>
-            <input type="email" id="email" name="email" placeholder="Email Address" required/>
+            <input type="email" id="email" name="email" placeholder="Email Address" required />
             <label for="country">Country</label>
             <select id="country" name="country">
           <option value="">Select Country</option>
@@ -53,48 +54,53 @@
           <option value="canada">Canada</option>
           <option value="africa">Africa</option>
         </select>
-            <br /><br />
+            <br/>
+            <br/>
             <label for="question">Have you ever visited Tsavo Park before?</label>
             <input type="radio" name="visit" value="Yes" />Yes
             <input type="radio" name="visit" value="No" />No
-            <br />
-            <br />
-            <br />
-            <label for="query">Subject</label>
-            <textarea id="query" name="query" placeholder="Message" style="height: 250px"></textarea>
-            <input type="submit" value="Submit" />
+            <br/>
+            <br/>
+            <br/>
+            <div style="display: flex; justify-content: space-between">
+                <div style="width: 100%">
+                    <label for="query">InquiryQuestion</label>
+                    <input type="query" id="queryBox" name="query" placeholder="Insert Question Here" required/>
+                </div>
+            </div>
+            <input type="submit" value="Submit" id="mySubmit" />
         </form>
     </div>
 
     <!-- CONTENT END -->
 
-    <div class="sub-footer">
-        <div class="footer-brand-container">
-            <img src="assets/images/logo.png" width="200" height="200" />
+    <div class=" sub-footer ">
+        <div class="footer-brand-container ">
+            <img src="assets/images/logo.png " width="200 " height="200 " />
             <p>
                 Wilderness Bookings is a listings platform. We specialise in targeted safari destinations allowing properties and safari operators to display their products to targeted audience.
                 <br /><br /> As a result, our users get to contact these companies directly.
             </p>
         </div>
         <ul>
-            <li class="link-heading">Quicklinks</li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li class="link-heading ">Quicklinks</li>
+            <li><a href="about.html ">About</a></li>
+            <li><a href="contact.html ">Contact</a></li>
         </ul>
 
-        <ul style="width: 15%">
-            <li class="link-heading">Popular Spots</li>
-            <li><a href="#">Maasai Mara</a></li>
-            <li><a href="#">Amboseli Park</a></li>
-            <li><a href="#">Serengeti</a></li>
+        <ul style="width: 15% ">
+            <li class="link-heading ">Popular Spots</li>
+            <li><a href="# ">Maasai Mara</a></li>
+            <li><a href="# ">Amboseli Park</a></li>
+            <li><a href="# ">Serengeti</a></li>
         </ul>
 
         <ul>
-            <li class="link-heading">Contact Us</li>
+            <li class="link-heading ">Contact Us</li>
             <li>Please feel free to contact us about anything on this website</li>
             <li>Wilderness Bookings</li>
             <li>
-                <a href="mailto:info@tsavopark.com">info@tsavopark.com</a>
+                <a href="mailto:info@tsavopark.com ">info@tsavopark.com</a>
             </li>
             <li>+254 (0)716 123456</li>
         </ul>
@@ -103,14 +109,35 @@
     <footer>
         <p>
             &copy; All rights reserved. Tsavopark.com 2022
-            <a href="mailto:info@tsavopark.com">info@tsavopark.com</a>
+            <a href="mailto:info@tsavopark.com ">info@tsavopark.com</a>
         </p>
-        <div class="social-icon">
-            <img src="assets/images/fb.png" />
-            <img src="assets/images/insta.png" />
-            <img src="assets/images/twitter.png" />
+        <div class="social-icon ">
+            <img src="assets/images/fb.png " />
+            <img src="assets/images/insta.png " />
+            <img src="assets/images/twitter.png " />
         </div>
     </footer>
+    <script>
+        //Script Called At the End for Notifications When Submitting to DB
+        const button = document.getElementById("queryBox");
+        const notifs = document.getElementById("notifications");
+
+        const message =
+            "Thanks for reaching out! Your message has been sent and someone will get back to you soon! Don't Forget to Submit!";
+
+        button.addEventListener("blur", () => createNotification());
+
+        function createNotification() {
+            const notif = document.createElement("div");
+            notif.classList.add("notif");
+            notif.innerText = message;
+            notifs.appendChild(notif);
+
+            setTimeout(() => {
+                notif.remove();
+            }, 3000);
+        }
+    </script>
 </body>
 
 </html>
