--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -206,8 +206,30 @@
         const addBtn = document.getElementById('addbtn');
         //our notes constant variable 
         const notes = JSON.parse(localStorage.getItem('notes'))
+        const buttons = document.querySelectorAll('.read-more-btn')
 
-        //if notes exsist then we have to add those notes to the DOM
+        buttons.forEach(button => {
+                button.addEventListener('click', function(e) {
+                    const x = e.clientX
+                    const y = e.clientY
+
+                    const buttonTop = e.target.offsetTop
+                    const buttonLeft = e.target.offsetLeft
+
+                    const xInside = x - buttonLeft
+                    const yInside = y - buttonTop
+
+                    const circle = document.createElement('span')
+                    circle.classList.add('circle')
+                    circle.style.top = yInside + 'px'
+                    circle.style.left = xInside + 'px'
+
+                    this.appendChild(circle)
+
+                    setTimeout(() => circle.remove(), 500)
+                })
+            })
+            //if notes exsist then we have to add those notes to the DOM
         if (notes) {
             notes.forEach(note => addNewNote(note))
         }
