--- a/views/pages/safaris.ejs
+++ b/views/pages/safaris.ejs
@@ -23,6 +23,7 @@
             <li><a href="/contact">Contact</a></li>
         </ul>
     </header>
+
     <!-- CONTENT START -->
     <div class="banner-container-safaris">
         <h1>Safaris</h1>
@@ -135,6 +136,40 @@
         </div>
     </div>
 
+    <!-- Slideshow container -->
+    <div class="slideshow-container">
+        <!-- Full-width images with number and caption text -->
+        <div class="mySlides fade">
+            <div class="numbertext">1 / 3</div>
+            <img src="Assets/images/img1.jpg" style="width: 100%" />
+            <div class="text">Zeebra Safari</div>
+        </div>
+
+        <div class="mySlides fade">
+            <div class="numbertext">2 / 3</div>
+            <img src="Assets/images/img2.jpg" style="width: 100%" />
+            <div class="text">Giraffe Safari</div>
+        </div>
+
+        <div class="mySlides fade">
+            <div class="numbertext">3 / 3</div>
+            <img src="Assets/images/img3.jpg" style="width: 100%" />
+            <div class="text">Buffalo Safari</div>
+        </div>
+
+        <!-- Next and previous buttons -->
+        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+    </div>
+    <br/>
+
+    <!-- The dots/circles -->
+    <div style="text-align: center">
+        <span class="dot" onclick="currentSlide(1)"></span>
+        <span class="dot" onclick="currentSlide(2)"></span>
+        <span class="dot" onclick="currentSlide(3)"></span>
+    </div>
+
     <!-- CONTENT END -->
 
     <div class="sub-footer">
@@ -162,9 +197,7 @@
             <li class="link-heading">Contact Us</li>
             <li>Please feel free to contact us about anything on this website</li>
             <li>Wilderness Bookings</li>
-            <li>
-                <a href="mailto:info@tsavopark.com ">info@tsavopark.com</a>
-            </li>
+            <li><a href="mailto:info@tsavopark.com">info@tsavopark.com</a></li>
             <li>+254 (0)716 123456</li>
         </ul>
     </div>
@@ -192,6 +225,33 @@
                 return;
             }
             document.getElementById("number").value = count;
+        }
+
+        let slideIndex = 1;
+        showSlides(slideIndex);
+
+        // Next/previous controls
+        function plusSlides(n) {
+            showSlides(slideIndex += n);
+        }
+
+        // Thumbnail image controls
+        function currentSlide(n) {
+            showSlides(slideIndex = n);
+        }
+
+        function showSlides() {
+            let i;
+            let slides = document.getElementsByClassName("mySlides");
+            for (i = 0; i < slides.length; i++) {
+                slides[i].style.display = "none";
+            }
+            slideIndex++;
+            if (slideIndex > slides.length) {
+                slideIndex = 1
+            }
+            slides[slideIndex - 1].style.display = "block";
+            setTimeout(showSlides, 4000);
         }
     </script>
 </body>
